--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>From Suffering To Awakening | Eckhart Tolle on Awakening Through Life's Challenges (Part 1)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">33 minutes ago</div>
+                        <div class="date">50 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>What's the Probability of a Lost Decade in the S&P 500?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Sadhguru's Message on Deepfakes & Cybercrime</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 22.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Do Not Look for Meaning of Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -343,7 +343,7 @@
                     <div class="video-info">
                         <h3>Craving for Sweets? Watch This | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -805,7 +805,7 @@
                     <div class="video-info">
                         <h3>A tiny elite will soon control all the resources</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2316,7 +2316,7 @@
                     <div class="video-info">
                         <h3>POV Spaghetti Amatriciana 🍝👨‍🍳 #chef #pasta #pov</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 23, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>What's the Probability of a Lost Decade in the S&P 500?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 22.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5325,7 +5325,7 @@
                         <div class="video-info">
                             <h3>A tiny elite will soon control all the resources</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>From Suffering To Awakening | Eckhart Tolle on Awakening Through Life's Challenges (Part 1)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">33 minutes ago</div>
+                            <div class="date">50 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Sadhguru's Message on Deepfakes & Cybercrime</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Do Not Look for Meaning of Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7326,7 +7326,7 @@
                         <div class="video-info">
                             <h3>Craving for Sweets? Watch This | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8988,7 +8988,7 @@
                         <div class="video-info">
                             <h3>POV Spaghetti Amatriciana 🍝👨‍🍳 #chef #pasta #pov</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 23, 2025</div>
                         </div>
                     </a>
                 </div>
